--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.5",
+    "unplugin-inject-preload": "^2.0.3",
     "vite": "^5.2.0"
   }
 }
